--- a/index.html
+++ b/index.html
@@ -352,6 +352,12 @@
             <div class="projects-section">
                 <a href="https://drive.google.com/drive/folders/1Ja7yiK9vIZOBZXcZ9NSjsYt5KAQRcCHJ?usp=sharing" class="project-link">Ссылка на сертификаты</a>
         </div>
+        <div>
+            <div class="section" id="projects">
+                <h2>Ссылка на новеллу</h2>
+                <div class="projects-section">
+                    <a href="https://antoniosniper.github.io/practikatwine/" class="project-link">Ссылка на сертификаты</a>
+        </div>
         
         <div class="section" id="contacts">
             <h2>Контакты</h2>
@@ -427,4 +433,5 @@
         }
     </script>
 </body>
+
 </html>
