--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <div class="section" id="projects">
                 <h2>Ссылка на новеллу</h2>
                 <div class="projects-section">
-                    <a href="https://antoniosniper.github.io/practikatwine/" class="project-link">Ссылка на сертификаты</a>
+                    <a href="https://antoniosniper.github.io/practikatwine/" class="project-link">Ссылка на новеллу</a>
         </div>
         
         <div class="section" id="contacts">
@@ -435,3 +435,4 @@
 </body>
 
 </html>
+
