--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <div class="project-item">
                     <h3 class="project-title">Документооборот в команде</h3>
                     <p>Реализация системы документооборота.</p>
-                    <div class="project-role">Роль: Программист, аналитик</div>
+                    <div class="project-role">Роль: Программист</div>
                     <br>
                     <a href="https://drive.google.com/drive/folders/1VnHapgPl0awsYvd3YNCCfPK0aKvWBehK?usp=sharing" class="project-link">Ссылка на репозиторий</a>
                 </div>
@@ -435,4 +435,5 @@
 </body>
 
 </html>
+
 
