--- a/index.html
+++ b/index.html
@@ -352,6 +352,14 @@
             <div class="projects-section">
                 <a href="https://drive.google.com/drive/folders/1Ja7yiK9vIZOBZXcZ9NSjsYt5KAQRcCHJ?usp=sharing" class="project-link">Ссылка на сертификаты</a>
         </div>
+         <div>
+            <div class="section" id="projects">
+            <h2>Чемпионат</h2>
+            <div class="projects-section">
+                <a href="https://antoniosniper.github.io/Chemp/" class="project-link">Модуль А</a>
+                <a href="https://antoniosniper.github.io/onlineschool/" class="project-link">Модуль Б</a>
+                <a href="https://antoniosniper.github.io/doska/" class="project-link">Модуль В</a>
+        </div>
         <div>
             <div class="section" id="projects">
                 <h2>Ссылка на новеллу</h2>
@@ -435,5 +443,6 @@
 </body>
 
 </html>
+
 
 
